# elegantia

./: .gitignore  main.py  pyproject.toml
api/v1/: api.py
api/v1/endpoints/: conta_receber_router.py
core/: configs.py  database.py  deps.py  log.py  utils.py
midlewares/: webhook_midleware.py
models/: conta_receber_model.py
schemas/: conta_receber_schema.py
z_esboco/: esboço.txt
