[tool.poetry]
name = "elegantia"
version = "0.1.0"
description = ""
authors = ["Adriano Faria <adriano@conectasolucoes.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
motor = "^3.5.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
